--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@ Sales, 2002
 <slide  >
   
     <hgroup>
-      <h2>Conclusions</h2>
+      <h2>Takeaways</h2>
       <h3></h3>
     </hgroup>
     <article ><ul>
