--- a/index.html
+++ b/index.html
@@ -108,11 +108,24 @@ Figure credit: @jchodera, Tom Cruise
     </hgroup>
     <article ><p><center>
 <img height=300 src=figures/multiscale-cartoon.png />
-<video id="sampleMovie" src="movies/shaw-dasatanib-2.mov" loop=\"true\ autoPlay=\"true\  width="512" height="384"></video>
+<video id="sampleMovie" src="movies/shaw-dasatanib-2.mov" loop=\\"true\\ autoPlay=\\"true\\  width="512" height="384"></video>
 </center></p>
 <footer class="source"> 
 Movie Credit: Shan et al: J. Am. Chem. Soc. (2011).  Dasatinib / src
 </footer></article>
+ 
+</slide>
+
+<slide  >
+  
+    <hgroup>
+      <h2>Outline</h2>
+      <h3></h3>
+    </hgroup>
+    <article ><ul>
+<li>Tools and Theory: OpenMM, FAH, MSMBuilder, MDTraj</li>
+<li>Application: Benchmarking Small Forcefields</li>
+</ul></article>
  
 </slide>
 
