--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Eastman et al, 2012.
     </hgroup>
     <article ><ul>
 <li>Largest distributed computing project</li>
-<li>100,000 CPUs, 10,000 GPUs, 40 petaflops!</li>
+<li>100,000 CPUs, 10,000 GPUs, 40 petaflops, milliseconds!</li>
 </ul>
 <p><center>
 <img height=300 src=figures/folding-icon.png />
@@ -240,7 +240,10 @@ http://folding.stanford.edu/
     </hgroup>
     <article ><p><center>
 <img height=400 src=figures/NewPaths3.png />
-</center></p></article>
+</center></p>
+<footer class="source"> 
+See work by Chodera, Bowman, Pande, Noe, Huang, Voelz, Hummer, Prinz, Singhal
+</footer></article>
  
 </slide>
 
