--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@ Movie Credit: Shan et al: J. Am. Chem. Soc. (2011).  Dasatinib / src
       <h3></h3>
     </hgroup>
     <article ><ul>
-<li>Tools and Theory: OpenMM + FAH</li>
-<li>Tools and Theory: MSMBuilder + MDTraj</li>
-<li>Tools and Theory: Omnia</li>
+<li>Simulating Biological Timescales: OpenMM + FAH</li>
+<li>Machine learning on atomistic simulations: MSMBuilder + MDTraj</li>
+<li>A full stack: Omnia</li>
 <li>Application: Benchmarking Small Forcefields</li>
 </ul></article>
  
@@ -379,10 +379,7 @@ model.fit(data)
 
 </pre>
 
-<p>Sklearn uses 2D arrays; MSMB uses lists of arrays!</p>
-<footer class="source"> 
-McGibbon et al, 2015 <t>
-</footer></article>
+<p>Sklearn uses 2D arrays; MSMB uses lists of arrays!</p></article>
  
 </slide>
 
