--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Movie Credit: Shan et al: J. Am. Chem. Soc. (2011).  Dasatinib / src
     </hgroup>
     <article ><ul>
 <li>Simulating Biological Timescales: OpenMM + FAH</li>
-<li>Machine learning on atomistic simulations: MSMBuilder + MDTraj</li>
+<li>Inference on atomistic simulations: MSMBuilder + MDTraj</li>
 <li>A full stack: Omnia</li>
 <li>Application: Benchmarking Small Forcefields</li>
 </ul></article>
