--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Movie Credit: Shan et al: J. Am. Chem. Soc. (2011).  Dasatinib / src
       <h3></h3>
     </hgroup>
     <article ><ul>
-<li>Simulating Biological Timescales: OpenMM + FAH</li>
+<li>Simulating Biological Timescales: OpenMM + Folding@Home</li>
 <li>Inference on atomistic simulations: MSMBuilder + MDTraj</li>
 <li>A full stack: Omnia</li>
 <li>Application: Benchmarking Small Forcefields</li>
