--- a/index.html
+++ b/index.html
@@ -73,29 +73,13 @@ URL: https://code.google.com/p/io-2012-slides
 <slide  >
   
     <hgroup>
-      <h2>erooM's Law for R&D Efficiency</h2>
-      <h3>Producing a drug costs $2B and 15 years, with 95% fail rate</h3>
-    </hgroup>
-    <article ><p><center>
-<img height=400 src=figures/eroom.png />
-</center></p>
-<footer class="source"> 
-Scannell, 2012
-</footer></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>How can computers help design drugs?</h2>
+      <h2>The Atomistic Basis of Disease</h2>
       <h3></h3>
     </hgroup>
-    <article ><p><center>
-<img height=475 src=figures/cruise.png />
-</center></p>
+    <article ><p>...EVKMD<b><font color="black">A</font></b>EFRHDS...  ...EVKMD<b><font color="black">T</font></b>EFRHDS...  ...EVKMD<b><font color="black">V</font></b>EFRHDS...</p>
+<p><img width=300 src=figures/alanine.png />  <img width=300 src=figures/threonine.png />   <img width=300 src=figures/valine.png /></p>
 <footer class="source"> 
-Figure credit: @jchodera, Tom Cruise
+Jonsson, 2012  A673 T673 V673
 </footer></article>
  
 </slide>
@@ -104,11 +88,11 @@ Figure credit: @jchodera, Tom Cruise
   
     <hgroup>
       <h2>Predictive atomistic models</h2>
-      <h3>Designing the binding, specificity, and signaling of chemotherapeutics</h3>
+      <h3>Predict experiments, rationalize function, design molecules</h3>
     </hgroup>
     <article ><p><center>
 <img height=300 src=figures/multiscale-cartoon.png />
-<video id="sampleMovie" src="movies/shaw-dasatanib-2.mov" loop=\\"true\\ autoPlay=\\"true\\  width="512" height="384"></video>
+<video id="sampleMovie" src="movies/shaw-dasatanib-2.mov" loop=\"true\ autoPlay=\"true\  width="512" height="384"></video>
 </center></p>
 <footer class="source"> 
 Movie Credit: Shan et al: J. Am. Chem. Soc. (2011).  Dasatinib / src
@@ -189,7 +173,7 @@ Eastman et al, 2012.
     </hgroup>
     <article ><ul>
 <li>Largest distributed computing project</li>
-<li>100,000 CPUs, 10,000 GPUs, 40 petaflops, milliseconds!</li>
+<li>10,000 GPUs, 40 petaflops, milliseconds in aggregate!</li>
 </ul>
 <p><center>
 <img height=300 src=figures/folding-icon.png />
@@ -242,47 +226,6 @@ See work by Chodera, Bowman, Pande, Noe, Huang, Voelz, Hummer, Prinz, Singhal
 <slide  >
   
     <hgroup>
-      <h2>Counting Transitions</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><p><center></p>
-<p><img height=300 src=figures/NewPaths-2State.png /></p>
-<p><mathjax>$\downarrow$</mathjax></p>
-<p><mathjax>$A = (111222222)$</mathjax></p></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Counting Transitions</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><p><center></p>
-<p><mathjax>$A = (111222222)$</mathjax></p>
-<p><mathjax>$\downarrow$</mathjax></p>
-<p><mathjax>$C = \begin{pmatrix} C_{1\rightarrow 1} &amp; C_{1\rightarrow 2} \\\ C_{2 \rightarrow 1} &amp; C_{2 \rightarrow 2} \end{pmatrix} =  \begin{pmatrix}2 &amp; 1 \\\ 0 &amp; 5\end{pmatrix}$</mathjax></p>
-<p></center></p></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Estimating Rates</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><p><center>
-<mathjax>$C = \begin{pmatrix} C_{1\rightarrow 1} &amp; C_{1\rightarrow 2} \\\ C_{2 \rightarrow 1} &amp; C_{2 \rightarrow 2} \end{pmatrix} = \begin{pmatrix}2 &amp; 1 \\\ 0 &amp; 5\end{pmatrix}$</mathjax></p>
-<p><mathjax>$\downarrow$</mathjax></p>
-<p><mathjax>$T = \begin{pmatrix} T_{1\rightarrow 1} &amp; T_{1\rightarrow 2} \\\ T_{2 \rightarrow 1} &amp; T_{2 \rightarrow 2} \end{pmatrix} = \begin{pmatrix}\frac{2}{3} &amp; \frac{1}{3} \\\ 0 &amp; 1\end{pmatrix}$</mathjax></p>
-<p></center></p></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
       <h2>Application: Millisecond Protein Folding</h2>
       <h3></h3>
     </hgroup>
@@ -321,7 +264,7 @@ Kobilka, 2012.  See also Shukla, 2013.
 </center></p>
 <footer class="source"> 
 msmbuilder.org <br>
-https://github.com/msmbuilder/msmbuilder
+Bowman et al, 2009.  Beauchamp et al, 2012. 
 </footer></article>
  
 </slide>
@@ -348,26 +291,6 @@ https://github.com/msmbuilder/msmbuilder
 <footer class="source"> 
 http://rmcgibbo.org/posts/whats-new-in-msmbuilder3/
 </footer></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Re-engineering sklearn for timeseries</h2>
-      <h3>Sklearn uses 2D arrays; MSMB uses lists of arrays!</h3>
-    </hgroup>
-    <article ><pre class="prettyprint" data-lang="python">
-
-# sklearn style
-data = np.zeros((n_samples, n_features))
-
-# MSMB style
-data = [np.zeros((n_samples, n_features)) for i in range(num_trajectories)]
-
-model.fit(data)
-
-</pre></article>
  
 </slide>
 
@@ -665,7 +588,7 @@ See also van der Spoel, JCTC, 2011 and Fennell, 2012.
   
     <hgroup>
       <h2>How many measurements are there?</h2>
-      <h3></h3>
+      <h3>Munging the ThermoML with pyxb and pandas</h3>
     </hgroup>
     <article ><p><center>
 <img height=450 src=figures/funnel.png />
@@ -731,7 +654,7 @@ PME + Langevin 1 fs + Monte Carlo Barostat + Fixed HBond Constraints + 1000 mole
   
     <hgroup>
       <h2>Fixed charges fail to capture polarizability</h2>
-      <h3>Observed: $\epsilon \approx 2.0$, Predicted: $\epsilon \approx 1.0$, $\Delta \Delta G \approx$ 2 kcal / mol</h3>
+      <h3>Observed: $\epsilon \approx 2.0$, Predicted: $\epsilon \approx 1.0$, $\Delta \Delta G_{solv} \approx$ 2 kcal / mol</h3>
     </hgroup>
     <article ><p><center>
 <img height=400 src=figures/nonpolar_molecules.png />
@@ -779,7 +702,10 @@ Sales, 2002
 <li>Perform new experiments in automated wetlab</li>
 <li>Bayesian (MCMC) forcefield / experimental design</li>
 <li>Polarizable forcefields</li>
-</ul></article>
+</ul>
+<p><center>
+<img height=250 src=figures/robot_image.jpg />
+</center></p></article>
  
 </slide>
 
