Added citation for thermoml work

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ Me: `conda install -c https://conda.binstar.org/omnia mdtraj`</font>
       <h3>omnia.md</h3>
     </hgroup>
     <article ><pre class="prettyprint" data-lang="bash">
-conda config --add channels http://conda.binstar.org/omnia/
+conda config --add channels http://conda.binstar.org/omnia
 conda install omnia
 </pre>
 
@@ -605,7 +605,10 @@ PME + Langevin 1 fs + Monte Carlo Barostat + Fixed HBond Constraints + 1000 mole
     </hgroup>
     <article ><p><center>
 <img height=500 src=figures/densities_thermoml.png />
-</center></p></article>
+</center></p>
+<footer class="source"> 
+Beauchamp et al, In Preparation.
+</footer></article>
  
 </slide>
 
@@ -627,7 +630,10 @@ PME + Langevin 1 fs + Monte Carlo Barostat + Fixed HBond Constraints + 1000 mole
     </hgroup>
     <article ><p><center>
 <img height=450 src=figures/dielectrics_thermoml_nocorr.png />
-</center></p></article>
+</center></p>
+<footer class="source"> 
+Beauchamp et al, In Preparation.
+</footer></article>
  
 </slide>
 
@@ -668,7 +674,10 @@ Sales, 2002
     </hgroup>
     <article ><p><center>
 <img height=450 src=figures/dielectrics_thermoml.png />
-</center></p></article>
+</center></p>
+<footer class="source"> 
+Beauchamp et al, In Preparation.
+</footer></article>
  
 </slide>
 
