Change wording: timescale gap

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Movie Credit: Shan et al: J. Am. Chem. Soc. (2011).  Dasatinib / src
   
     <hgroup>
       <h2>How do we reach biological timescales?</h2>
-      <h3>Challenge: $10^5$ atoms, $10^{12}$ iterations.</h3>
+      <h3>The timescale gap: $10^{12}$</h3>
     </hgroup>
     <article ><p><center>
 <img height=450 src=figures/protein_timescales.jpg />
