--- a/index.html
+++ b/index.html
@@ -385,9 +385,11 @@ User: I tried easy_install and other things and that didn't work for me.</font>
   
     <hgroup>
       <h2>A full stack for biophysical computation</h2>
-      <h3>omnia.md</h3>
+      <h3></h3>
     </hgroup>
     <article ><pre class="prettyprint" data-lang="bash">
+<font color="blue">Me: Try this:
+
 conda config --add channels http://conda.binstar.org/omnia
 conda install omnia
 
