--- a/index.html
+++ b/index.html
@@ -388,7 +388,10 @@ User: I tried easy_install and other things and that didn't work for me.</font>
       <h3></h3>
     </hgroup>
     <article ><pre class="prettyprint" data-lang="bash">
-<font color="blue">Me: Try this:</font>
+
+<font color="blue">
+Me: Try this:
+</font>
 
 conda config --add channels http://conda.binstar.org/omnia
 conda install omnia
