Fix missing font tag closure

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ User: I tried easy_install and other things and that didn't work for me.</font>
       <h2>A full stack for biophysical computation</h2>
       <h3></h3>
     </hgroup>
-    <article ><pre class="prettyprint" data-lang="bash">
+    <article ><pre>
 
 <font color="blue">
 Me: Try this:
