Switch from ligand binding to resistance application

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Jonsson, 2012  A673 T673 V673
     </hgroup>
     <article ><p><center>
 <img height=300 src=figures/multiscale-cartoon.png />
-<video id="sampleMovie" src="movies/shaw-dasatanib-2.mov" loop=\\"true\\ autoPlay=\\"true\\  width="512" height="384"></video>
+<video id="sampleMovie" src="movies/shaw-dasatanib-2.mov" loop=\"true\ autoPlay=\"true\  width="512" height="384"></video>
 </center></p>
 <footer class="source"> 
 Movie Credit: Shan et al: J. Am. Chem. Soc. (2011).  Dasatinib / src
@@ -241,15 +241,20 @@ Voelz, Bowman, Beauchamp, Pande. J. Am. Chem. Soc., 2010
 <slide  >
   
     <hgroup>
-      <h2>(Future) Application: Ligand Binding</h2>
+      <h2>Application: chemotherapy resistance</h2>
       <h3></h3>
     </hgroup>
-    <article ><p><center>
-<img height=450 src=figures/gprc_ligands.jpg />
-</center></p>
-<footer class="source"> 
-Kobilka, 2012.  See also Shukla, 2013.
-</footer></article>
+    <article ><p><img height="225" class="center" src=figures/mutation_diagram_SRC.png /></p></article>
+ 
+</slide>
+
+<slide  >
+  
+    <hgroup>
+      <h2>Application: chemotherapy resistance</h2>
+      <h3></h3>
+    </hgroup>
+    <article ><p><img height="500" class="center" src=figures/res_muts-2.png /></p></article>
  
 </slide>
 
