More reductions in length

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ http://folding.stanford.edu/
 <slide  >
   
     <hgroup>
-      <h2>Traditional Simulation Analysis</h2>
+      <h2>Traditional Simulation Analysis: Movies</h2>
       <h3></h3>
     </hgroup>
     <article ><p><center>
