--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Jonsson, 2012  A673 T673 V673
   
     <hgroup>
       <h2>Predictive atomistic models</h2>
-      <h3>Predict experiments, rationalize function, design molecules</h3>
+      <h3>Predict experiments quantitatively, rationalize function, design molecules</h3>
     </hgroup>
     <article ><p><center>
 <img height=300 src=figures/multiscale-cartoon.png />
@@ -172,6 +172,7 @@ Eastman et al, 2012.
       <h3></h3>
     </hgroup>
     <article ><ul>
+<li>GPUs only take us to ~100 ns / day</li>
 <li>Largest distributed computing project</li>
 <li>10,000 GPUs, milliseconds in aggregate!</li>
 </ul>
