--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ http://folding.stanford.edu/
 <img height=400 src=figures/NewPaths3.png />
 </center></p>
 <footer class="source"> 
-See work by Chodera, Bowman, Pande, Noe, Huang, Voelz, Hummer, Prinz, Singhal
+See work by Chodera, Bowman, Beauchamp, Pande, Noe, Huang, Voelz, Hummer, Prinz, Singhal
 </footer></article>
  
 </slide>
@@ -246,7 +246,10 @@ Voelz, Bowman, Beauchamp, Pande. J. Am. Chem. Soc., 2010
       <h3></h3>
     </hgroup>
     <article ><p><img height="175" class="center" src=figures/mutation_diagram_SRC.png /></p>
-<p><img height="300" class="center" src=figures/res_muts-2.png /></p></article>
+<p><img height="300" class="center" src=figures/res_muts-2.png /></p>
+<footer class="source"> 
+cbioportal.org
+</footer></article>
  
 </slide>
 
@@ -440,12 +443,10 @@ Fennell, Mobley.  J. Phys. Chem. B. 2014
       <h3></h3>
     </hgroup>
     <article ><ul>
-<li>Forcefields should be consistent with all available data</li>
 <li>Most datasets are heterogeneous, offline, and static</li>
 </ul>
 <p><center>
-<img height=325 src=figures/qc_supply_grinder_510482.jpg />
-<img height=300 src=figures/stack-of-old-books.jpg />
+<img height=350 src=figures/stack-of-old-books.jpg />
 </center></p>
 <footer class="source"> 
 See also work by Wang, Pande, Swope, Case, MacKerell, Ponder, Best, Hummer, Bruschweiler.
