--- a/index.html
+++ b/index.html
@@ -447,10 +447,7 @@ Fennell, Mobley.  J. Phys. Chem. B. 2014
 </ul>
 <p><center>
 <img height=350 src=figures/stack-of-old-books.jpg />
-</center></p>
-<footer class="source"> 
-See also work by Wang, Pande, Swope, Case, MacKerell, Ponder, Best, Hummer, Bruschweiler.
-</footer></article>
+</center></p></article>
  
 </slide>
 
