--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Jonsson, 2012  A673 T673 V673
     </hgroup>
     <article ><p><center>
 <img height=300 src=figures/multiscale-cartoon.png />
-<video id="sampleMovie" src="movies/shaw-dasatanib-2.mov" loop=\\"true\\ autoPlay=\\"true\\  width="512" height="384"></video>
+<video id="sampleMovie" src="movies/shaw-dasatanib-2.mov" loop=\"true\ autoPlay=\"true\  width="512" height="384"></video>
 </center></p>
 <footer class="source"> 
 Movie Credit: Shan et al: J. Am. Chem. Soc. (2011).  Dasatinib / src
@@ -412,23 +412,10 @@ omnia.md
       <h3></h3>
     </hgroup>
     <article ><ul>
-<li>Models (forcefields) are made to be broken</li>
-<li>Thousands of parameters = thousands of measurements</li>
+<li>Small molecule forcefields need work</li>
 </ul>
 <p><center>
-<img height=300 src=figures/robot_image.jpg />
-</center></p></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Small molecule forcefields need work</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><p><center>
-<img height=500 src=figures/mobley_dielectric.png />
+<img height=400 src=figures/mobley_dielectric.png />
 </center></p>
 <footer class="source"> 
 Fennell, Mobley.  J. Phys. Chem. B. 2014
@@ -443,6 +430,7 @@ Fennell, Mobley.  J. Phys. Chem. B. 2014
       <h3></h3>
     </hgroup>
     <article ><ul>
+<li>Thousands of parameters = thousands of measurements</li>
 <li>Most datasets are heterogeneous, offline, and static</li>
 </ul>
 <p><center>
