Fixes to dielectric story

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ URL: https://code.google.com/p/io-2012-slides
 
     <h1> Engineering a full python stack for biophysical computation</h1>
     <h2></h2>
-    <p> Kyle A. Beauchamp</p>
+    <p> Kyle A. Beauchamp<br/> Slides here: goo.gl/rKGhzZ</p>
   </hgroup>
 </slide>
 
@@ -92,7 +92,7 @@ Jonsson, 2012  A673 T673 V673
     </hgroup>
     <article ><p><center>
 <img height=300 src=figures/multiscale-cartoon.png />
-<video id="sampleMovie" src="movies/shaw-dasatanib-2.mov" loop=\"true\ autoPlay=\"true\  width="512" height="384"></video>
+<video id="sampleMovie" src="movies/shaw-dasatanib-2.mov" loop=\\"true\\ autoPlay=\\"true\\  width="512" height="384"></video>
 </center></p>
 <footer class="source"> 
 Movie Credit: Shan et al: J. Am. Chem. Soc. (2011).  Dasatinib / src
@@ -515,11 +515,23 @@ Beauchamp et al, In Preparation.
       <h3></h3>
     </hgroup>
     <article ><p><center>
-<img height=450 src=figures/dielectrics_thermoml_nocorr.png />
+<img height=450 src=figures/dielectrics_thermoml_nocorr_loglog.png />
 </center></p>
 <footer class="source"> 
 Beauchamp et al, In Preparation.
 </footer></article>
+ 
+</slide>
+
+<slide  >
+  
+    <hgroup>
+      <h2>Fixed charges fail to capture polarizability</h2>
+      <h3>Observed: $\epsilon \approx 2.0$, Predicted: $\epsilon \approx 1.0$, $\Delta \Delta G_{solv} \approx$ 2 kcal / mol</h3>
+    </hgroup>
+    <article ><p><center>
+<img height=400 src=figures/nonpolar_molecules.png />
+</center></p></article>
  
 </slide>
 
@@ -547,7 +559,7 @@ Sales, 2002
       <h3></h3>
     </hgroup>
     <article ><p><center>
-<img height=450 src=figures/dielectrics_thermoml.png />
+<img height=450 src=figures/dielectrics_thermoml_loglog.png />
 </center></p>
 <footer class="source"> 
 Beauchamp et al, In Preparation.
