--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Jonsson, 2012  A673 T673 V673
 <slide  >
   
     <hgroup>
-      <h2>Predictive atomistic models</h2>
+      <h2>Molecular Dynamics</h2>
       <h3>Predict experiments quantitatively, rationalize function, design molecules</h3>
     </hgroup>
     <article ><p><center>
@@ -107,7 +107,7 @@ Movie Credit: Shan et al: J. Am. Chem. Soc. (2011).  Dasatinib / src
       <h3></h3>
     </hgroup>
     <article ><ul>
-<li>Simulating Biological Timescales: OpenMM + Folding@Home</li>
+<li>Simulating Biological Molecules: OpenMM + Folding@Home</li>
 <li>Inference on atomistic simulations: MSMBuilder + MDTraj</li>
 <li>A full stack for biophysical computation: Omnia.md</li>
 <li>Application: Benchmarking Small Forcefields</li>
@@ -478,7 +478,7 @@ Figure from Chiraco, J. Chem. Eng. Dat., 2013.
 <slide  >
   
     <hgroup>
-      <h2>Density and dielectric constants as forcefield tests</h2>
+      <h2>Falsifying forcefields using neat liquid density and dielectric constants</h2>
       <h3></h3>
     </hgroup>
     <article ><ul>
@@ -577,7 +577,6 @@ Beauchamp et al, In Preparation.
 <li>Scale up, real-time simulation, web frontend</li>
 <li>Perform new experiments in automated wetlab</li>
 <li>Bayesian (MCMC) forcefield / experimental design</li>
-<li>Polarizable forcefields</li>
 </ul>
 <p><center>
 <img height=250 src=figures/robot_image.jpg />
