delete one slide

--- a/index.html
+++ b/index.html
@@ -371,25 +371,6 @@ Haque, 2014.
 <slide  >
   
     <hgroup>
-      <h2>Python packaging blues</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><pre>
-
-<font color="red">User: I couldn't really install the mdtraj module on my computer [...]
-User: I tried easy_install and other things and that didn't work for me.</font>
-
-</pre>
-
-<p><center>
-<img height=370 src=figures/dependencies0.png />
-</center></p></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
       <h2>A full stack for biophysical computation</h2>
       <h3></h3>
     </hgroup>
@@ -574,7 +555,7 @@ Beauchamp et al, In Preparation.
       <h3></h3>
     </hgroup>
     <article ><ul>
-<li>Scale up, real-time simulation, web frontend</li>
+<li>Scale up, real-time simulation, CI, web frontend</li>
 <li>Perform new experiments in automated wetlab</li>
 <li>Bayesian (MCMC) forcefield / experimental design</li>
 </ul>
