--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ URL: https://code.google.com/p/io-2012-slides
 <slide  >
   
     <hgroup>
-      <h2>The Atomistic Basis of Disease</h2>
+      <h2>The atomistic basis of disease</h2>
       <h3></h3>
     </hgroup>
     <article ><p>...EVKMD<b><font color="black">A</font></b>EFRHDS...  ...EVKMD<b><font color="black">T</font></b>EFRHDS...  ...EVKMD<b><font color="black">V</font></b>EFRHDS...</p>
@@ -87,7 +87,7 @@ Jonsson, 2012  A673 T673 V673
 <slide  >
   
     <hgroup>
-      <h2>Molecular Dynamics</h2>
+      <h2>Molecular dynamics</h2>
       <h3>Predict experiments quantitatively, rationalize function, design molecules</h3>
     </hgroup>
     <article ><p><center>
@@ -168,7 +168,7 @@ Eastman et al, 2012.
 <slide  >
   
     <hgroup>
-      <h2>OpenMM Powers Folding@Home</h2>
+      <h2>OpenMM powers Folding@Home</h2>
       <h3></h3>
     </hgroup>
     <article ><ul>
@@ -188,7 +188,7 @@ http://folding.stanford.edu/
 <slide  >
   
     <hgroup>
-      <h2>Traditional Simulation Analysis: Movies</h2>
+      <h2>Traditional simulation analysis: movies</h2>
       <h3></h3>
     </hgroup>
     <article ><p><center>
@@ -212,7 +212,7 @@ http://folding.stanford.edu/
 <slide  >
   
     <hgroup>
-      <h2>Introduction to Markov State Models</h2>
+      <h2>Introduction to Markov state models</h2>
       <h3></h3>
     </hgroup>
     <article ><p><center>
@@ -227,7 +227,7 @@ See work by Chodera, Bowman, Beauchamp, Pande, Noe, Huang, Voelz, Hummer, Prinz,
 <slide  >
   
     <hgroup>
-      <h2>Application: Millisecond Protein Folding</h2>
+      <h2>Application: millisecond protein folding</h2>
       <h3></h3>
     </hgroup>
     <article ><p><center>
