--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ Beauchamp et al, 2012.
 <slide  >
   
     <hgroup>
-      <h2>MSMBuilder3: Design</h2>
+      <h2>MSMBuilder3: design</h2>
       <h3></h3>
     </hgroup>
     <article ><div style="float:right; margin-top:-100px">
@@ -304,7 +304,7 @@ http://rmcgibbo.org/posts/whats-new-in-msmbuilder3/
 <slide  >
   
     <hgroup>
-      <h2>MSMBuilder3: Demo</h2>
+      <h2>MSMBuilder3: demo</h2>
       <h3></h3>
     </hgroup>
     <article ><pre class="prettyprint" data-lang="python">
@@ -331,7 +331,7 @@ msmbuilder.org <br>
 <slide  >
   
     <hgroup>
-      <h2>MDTraj: Trajectory IO and featurization</h2>
+      <h2>MDTraj: trajectory IO and featurization</h2>
       <h3></h3>
     </hgroup>
     <article ><ul>
@@ -396,7 +396,7 @@ omnia.md
 <slide  >
   
     <hgroup>
-      <h2>Benchmarking Small Molecule Forcefields at the Scale of NIST</h2>
+      <h2>Benchmarking small molecule forcefields at the scale of NIST</h2>
       <h3></h3>
     </hgroup>
     <article ><ul>
@@ -430,7 +430,7 @@ Fennell, Mobley.  J. Phys. Chem. B. 2014
 <slide  >
   
     <hgroup>
-      <h2>Data Capture at NIST/TRC: ThermoML</h2>
+      <h2>Data capture at NIST/TRC: ThermoML</h2>
       <h3></h3>
     </hgroup>
     <article ><p><center>
