--- a/index.html
+++ b/index.html
@@ -566,6 +566,26 @@ Beauchamp et al, In Preparation.
 <slide  >
   
     <hgroup>
+      <h2>Bayesian Energy Landscape Tilting</h2>
+      <h3></h3>
+    </hgroup>
+    <article ><ul>
+<li>Infer conformational ensembles from simulation <b>and</b> ambiguous experiments</li>
+<li>Characterize posterior through MCMC</li>
+<li>Error bars on equilibrium <b>and</b> structural features</li>
+</ul>
+<p><center>
+<img height=250 src=figures/mcmc.png />    <img height=250 src=figures/bpti_raw.png />
+</center></p>
+<footer class="source"> 
+Beauchamp, Pande, Das.  Biophys. J.  2014.
+</footer></article>
+ 
+</slide>
+
+<slide  >
+  
+    <hgroup>
       <h2>Takeaways</h2>
       <h3></h3>
     </hgroup>
