--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Jonsson, 2012  A673 T673 V673
     </hgroup>
     <article ><p><center>
 <img height=300 src=figures/multiscale-cartoon.png />
-<video id="sampleMovie" src="movies/shaw-dasatanib-2.mov" loop=\\"true\\ autoPlay=\\"true\\  width="512" height="384"></video>
+<video id="sampleMovie" src="movies/shaw-dasatanib-2.mov" loop=\"true\ autoPlay=\"true\  width="512" height="384"></video>
 </center></p>
 <footer class="source"> 
 Movie Credit: Shan et al: J. Am. Chem. Soc. (2011).  Dasatinib / src
@@ -553,33 +553,13 @@ Beauchamp et al, In Preparation.
       <h3></h3>
     </hgroup>
     <article ><ul>
-<li>Scale up, real-time simulation, CI, web frontend</li>
+<li>RSS Feed: real-time simulation, CI, web frontend</li>
 <li>Perform new experiments in automated wetlab</li>
 <li>Bayesian (MCMC) forcefield / experimental design</li>
 </ul>
 <p><center>
 <img height=250 src=figures/robot_image.jpg />
 </center></p></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Bayesian Energy Landscape Tilting</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><ul>
-<li>Infer conformational ensembles from simulation <b>and</b> ambiguous experiments</li>
-<li>Characterize posterior through MCMC</li>
-<li>Error bars on equilibrium <b>and</b> structural features</li>
-</ul>
-<p><center>
-<img height=250 src=figures/mcmc.png />    <img height=250 src=figures/bpti_raw.png />
-</center></p>
-<footer class="source"> 
-Beauchamp, Pande, Das.  Biophys. J.  2014.
-</footer></article>
  
 </slide>
 
