--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@ GTX Titan, DHFR, OpenMM 6.2 (openmm.org) See also: Gromacs, AMBER, Charmm, NAMD,
 <img height=300 src=figures/openmm.png />
 </center></p>
 <footer class="source"> 
-openmm.org <br>
+openmm.org
+<span style="display:inline-block; width: 15px;"></span>
 Eastman et al, 2012.
 </footer></article>
  
@@ -181,6 +182,8 @@ Eastman et al, 2012.
 </center></p>
 <footer class="source"> 
 http://folding.stanford.edu/
+<span style="display:inline-block; width: 15px;"></span>
+Core developed by Yutong Zhao
 </footer></article>
  
 </slide>
@@ -248,7 +251,7 @@ Beauchamp, et al, PNAS 2012
 <slide  >
   
     <hgroup>
-      <h2>Application: chemotherapy resistance</h2>
+      <h2>Application: drugs and resistance</h2>
       <h3></h3>
     </hgroup>
     <article ><p><img height="175" class="center" src=figures/mutation_diagram_SRC.png /></p>
@@ -262,6 +265,16 @@ cbioportal.org
 <slide  >
   
     <hgroup>
+      <h2>Long-lived states in methyltransferases</h2>
+      <h3>Will guide docking, FEP efforts</h3>
+    </hgroup>
+    <article ><p><img width=480 src=figures/dihedral_map.png />  <img width=480 src=figures/dihedral_map_byrun.png /></p></article>
+ 
+</slide>
+
+<slide  >
+  
+    <hgroup>
       <h2>MSMBuilder</h2>
       <h3>Finding meaning in massive simulation datasets</h3>
     </hgroup>
@@ -269,7 +282,7 @@ cbioportal.org
 <img height=300 src=figures/msmbuilder.png />
 </center></p>
 <footer class="source"> 
-msmbuilder.org <br>
+msmbuilder.org
 <span style="display:inline-block; width: 15px;"></span>
 Bowman et al, 2009.
 <span style="display:inline-block; width: 15px;"></span>
@@ -396,176 +409,6 @@ omnia.md
 <slide  >
   
     <hgroup>
-      <h2>Benchmarking small molecule forcefields at the scale of NIST</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><ul>
-<li>Small molecule forcefields need work</li>
-</ul>
-<p><center>
-<img height=400 src=figures/mobley_dielectric.png />
-</center></p>
-<footer class="source"> 
-Fennell, Mobley.  J. Phys. Chem. B. 2014
-</footer></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Data access is killing forcefields</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><ul>
-<li>Thousands of parameters = thousands of measurements</li>
-<li>Most datasets are heterogeneous, offline, and static</li>
-</ul>
-<p><center>
-<img height=350 src=figures/stack-of-old-books.jpg />
-</center></p></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Data capture at NIST/TRC: ThermoML</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><p><center>
-<img height=540 src="figures/pipeline.png"/>
-</center></p></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>ThermoML is rapidly growing</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><p><center>
-<img height=475 src=figures/thermoml_by_time_new.png />
-</center></p>
-<footer class="source"> 
-Figure from Chiraco, J. Chem. Eng. Dat., 2013.
-</footer></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Falsifying forcefields using neat liquid density and dielectric constants</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><ul>
-<li>Sensitive to nonbonded parameters</li>
-<li>Simple ensemble average geometric interpretation</li>
-</ul>
-<p><mathjax>$$\rho = \langle \frac{M}{V} \rangle$$</mathjax></p>
-<p><mathjax>$$\epsilon = 1 + \frac{4\pi}{3} \frac{\langle \mu \cdot \mu \rangle - \langle \mu \rangle \cdot \langle \mu \rangle}{V k_B T}$$</mathjax></p>
-<footer class="source"> 
-See also van der Spoel, JCTC, 2011 and Fennell, 2012.
-</footer></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Densities are in the ballpark</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><p><center>
-<img height=500 src=figures/densities_thermoml.png />
-</center></p>
-<footer class="source"> 
-Beauchamp et al, In Preparation.
-</footer></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Static dielectric constants are consistently underestimated</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><p><center>
-<img height=450 src=figures/dielectrics_thermoml_nocorr_loglog.png />
-</center></p>
-<footer class="source"> 
-Beauchamp et al, In Preparation.
-</footer></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Fixed charges fail to capture polarizability</h2>
-      <h3>Observed: $\epsilon \approx 2.0$, Predicted: $\epsilon \approx 1.0$, $\Delta \Delta G_{solv} \approx$ 2 kcal / mol</h3>
-    </hgroup>
-    <article ><p><center>
-<img height=400 src=figures/nonpolar_molecules.png />
-</center></p></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Atom counting predicts molecular polarizability to within 2%</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><p><center>
-<img height=100 src=figures/sales_title.png />
-</center></p>
-<p><mathjax>$$\alpha = 1.53 n_C + 0.17 n_H + 0.57 n_O + 1.05 n_N + 2.99 n_S + \\ 2.48 n_P + 0.22 n_F + 2.16 n_{Cl} + 0.32 $$</mathjax></p>
-<p><mathjax>$$\epsilon_{corrected} = \epsilon_{MD} + 4 \pi N  \frac{\alpha}{\langle V \rangle}$$</mathjax></p>
-<footer class="source"> 
-Sales, 2002
-</footer></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Empirical atomic polarizability corrections reduce bias</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><p><center>
-<img height=450 src=figures/dielectrics_thermoml_loglog.png />
-</center></p>
-<footer class="source"> 
-Beauchamp et al, In Preparation.
-</footer></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
-      <h2>Where do we go from here?</h2>
-      <h3></h3>
-    </hgroup>
-    <article ><ul>
-<li>RSS Feed: real-time simulation, CI, web frontend</li>
-<li>Perform new experiments in automated wetlab</li>
-<li>Bayesian (MCMC) forcefield / experimental design</li>
-</ul>
-<p><center>
-<img height=250 src=figures/robot_image.jpg />
-</center></p></article>
- 
-</slide>
-
-<slide  >
-  
-    <hgroup>
       <h2>Takeaways</h2>
       <h3></h3>
     </hgroup>
@@ -573,7 +416,7 @@ Beauchamp et al, In Preparation.
 <li>Distributed GPU computing enables millisecond simulation</li>
 <li>MSMBuilder / MDTraj builds machine learning models of conformational dynamics</li>
 <li>omnia.md: Conda packaging of OpenMM, MSMBuilder, MDTraj, and more</li>
-<li>ThermoML: towards automated benchmarking of atomistic models</li>
+<li>Ongoing work: characterize metastable states of kinases and methyltransferases to drive docking / FEP efforts</li>
 </ul></article>
  
 </slide>
@@ -586,19 +429,17 @@ Beauchamp et al, In Preparation.
     </hgroup>
     <article ><ul>
 <li>John Chodera + ChoderaLab (MSKCC)</li>
-<li>Julie Behr (MSKCC)</li>
-<li>Kenneth Kroenlein (NIST)</li>
-<li>Robert McGibbon (Stanford)</li>
-<li>Peter Eastman (Stanford)</li>
+<li>Robert McGibbon (MSKCC)</li>
+<li>Peter Eastman, Yutong Zhao (Stanford)</li>
 <li>Vijay Pande + PandeLab (Stanford)</li>
-<li>Joy Ku (Stanford)</li>
+<li></li>
 <li>Jason Swails (Rutgers)</li>
 <li>Justin MacCallum (U. Calgary)</li>
 </ul>
 <footer class="source"> 
-Jan-Hendrik Prinz, Danny Parton, Bas Rustenburg, Sonya Hanson
+Jan-Hendrik Prinz, Patrick Grinaway, Danny Parton, Bas Rustenburg, Sonya Hanson
 Greg Bowman, Christian Schwantes, TJ Lane, Vince Voelz, Imran Haque, Matthew Harrigan, Carlos Hernandez, Bharath Ramsundar, Lee-Ping Wang
-Frank Noe, Martin Scherer, Xuhui Huang, Sergio Bacallado, Mark Friedrichs
+Frank Noe, Martin Scherer, Xuhui Huang, Sergio Bacallado, Mark Friedrichs, Joy Ku
 </footer></article>
  
 </slide>
