--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Eastman et al, 2012.
 <footer class="source"> 
 http://folding.stanford.edu/
 <span style="display:inline-block; width: 15px;"></span>
-Core developed by Yutong Zhao
+FAH OpenMM core developed by Yutong Zhao
 </footer></article>
  
 </slide>
@@ -287,6 +287,8 @@ msmbuilder.org
 Bowman et al, 2009.
 <span style="display:inline-block; width: 15px;"></span>
 Beauchamp et al, 2012. 
+<span style="display:inline-block; width: 15px;"></span>
+McGibbon et al, 2014.
 </footer></article>
  
 </slide>
