--- a/index.html
+++ b/index.html
@@ -323,17 +323,18 @@ http://rmcgibbo.org/posts/whats-new-in-msmbuilder3/
       <h3></h3>
     </hgroup>
     <article ><pre class="prettyprint" data-lang="python">
-from msmbuilder import example_datasets, cluster, msm
+from msmbuilder import example_datasets, cluster, msm, dataset
 from sklearn.pipeline import make_pipeline
 
-dataset = example_datasets.alanine_dipeptide.fetch_alanine_dipeptide()  # From Figshare!
-trajectories = dataset["trajectories"]  # List of MDTraj Trajectory Objects
+path = "/home/kyleb/msmbuilder_data/alanine_dipeptide/"
+trajectories = dataset.dataset(path + "*.dcd", topology=path + "ala2.pdb")
 
 clusterer = cluster.KCenters(n_clusters=10, metric="rmsd")
 msm_model = msm.MarkovStateModel()
 
 pipeline = make_pipeline(clusterer, msm_model)
 pipeline.fit(trajectories)
+
 
 </pre>
 
@@ -431,7 +432,7 @@ omnia.md
     </hgroup>
     <article ><ul>
 <li>John Chodera + ChoderaLab (MSKCC)</li>
-<li>Robert McGibbon (MSKCC)</li>
+<li>Robert McGibbon (Stanford)</li>
 <li>Peter Eastman, Yutong Zhao (Stanford)</li>
 <li>Vijay Pande + PandeLab (Stanford)</li>
 <li></li>
