--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@ omnia.md
 <li>Robert McGibbon (Stanford)</li>
 <li>Peter Eastman, Yutong Zhao (Stanford)</li>
 <li>Vijay Pande + PandeLab (Stanford)</li>
-<li></li>
 <li>Jason Swails (Rutgers)</li>
 <li>Justin MacCallum (U. Calgary)</li>
+<li>Minkui Luo (MSKCC)</li>
 </ul>
 <footer class="source"> 
 Jan-Hendrik Prinz, Patrick Grinaway, Danny Parton, Bas Rustenburg, Sonya Hanson
